# yahoo-fantasy-football-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/agent/: agent.py
src/agent/tools/: __init__.py  league_info.py  matchups.py  player_stats.py  season_stats.py  standings.py  team_stats.py
src/api/: endpoints.py  yahoo_client.py
src/auth/: oauth.py  prompt_credentials.py
src/models/: __init__.py  league.py  player.py  stats.py  team.py
src/utils/: formatters.py
tests/: test_agent.py  test_api.py
